[tool.poetry]
name = "tinydb_sqlite"
version = "0.1.1"
description = ""
authors = ["Cologler <skyoflw@gmail.com>"]
license = "MIT"
readme = 'README.md'
homepage = 'https://github.com/Cologler/tinydb_sqlite-python'

[tool.poetry.dependencies]
python = "^3.8"
tinydb = "^4.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
ruff = "^0.0.263"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
